# kernel-compression

./: .gitignore  .gitmodules  README.md  build.sh  chacha20  chacha20.c  collect.py  run.sh
applications/bloom_filter/: CMakeLists.txt  prj.conf
applications/bloom_filter/src/: bloom-filter.c  main.c  tinybloom.c
applications/bubble_sort/: CMakeLists.txt
applications/bubble_sort/src/: main.c
applications/common/: libtarg.h
applications/mini_nn/: CMakeLists.txt  prj.conf
applications/mini_nn/src/: images.h  main.c  nn.c
applications/mppt/: CMakeLists.txt  prj.conf
applications/mppt/src/: main.c
applications/mppt/src/mppt/: mppt.c  mppt.h
applications/vector_3d/: CMakeLists.txt
applications/vector_3d/src/: main.c
plots/: reseult_arm_m33_psa.csv  result_arm_a53_wifi.csv  result_arm_a9_vector.csv  result_arm_m33_psa.csv  result_arm_m3_mqtt.csv  result_arm_r5_mininn.csv  sokplot3.py
